Increased accuracy upto 70%

--- a/Models.ipynb
+++ b/Models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-705b8cb73dfc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneural_network\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMLPClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-63-705b8cb73dfc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneural_network\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMLPClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn.cross_validation'"
      ]
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,6 @@
        "      <th>id</th>\n",
        "      <th>author</th>\n",
        "      <th>body</th>\n",
-       "      <th>timestamp</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -410,25 +409,23 @@
        "      <th>0</th>\n",
        "      <td>Will donate thrice the number of upvotes (amou...</td>\n",
        "      <td>https://www.reddit.com/r/india/comments/981o7s...</td>\n",
-       "      <td>832</td>\n",
+       "      <td>831</td>\n",
        "      <td>[R]eddiquette</td>\n",
-       "      <td>19701</td>\n",
+       "      <td>19710</td>\n",
        "      <td>981o7s</td>\n",
        "      <td>TheBeginnerr</td>\n",
        "      <td>&gt;**Note**: If you want to know what this is al...</td>\n",
-       "      <td>2018-08-18 01:32:17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Fuck all Religion</td>\n",
        "      <td>https://www.reddit.com/r/india/comments/f9outu...</td>\n",
-       "      <td>4198</td>\n",
+       "      <td>4195</td>\n",
        "      <td>Politics</td>\n",
-       "      <td>17869</td>\n",
+       "      <td>17880</td>\n",
        "      <td>f9outu</td>\n",
        "      <td>pking3</td>\n",
        "      <td>Fuck all religion. Fuck Hindusim, fuck Islam, ...</td>\n",
-       "      <td>2020-02-26 19:40:49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -436,11 +433,10 @@
        "      <td>https://www.reddit.com/r/india/comments/avafxp...</td>\n",
        "      <td>6913</td>\n",
        "      <td>[R]eddiquette</td>\n",
-       "      <td>10205</td>\n",
+       "      <td>10210</td>\n",
        "      <td>avafxp</td>\n",
        "      <td>doc_two_thirty</td>\n",
        "      <td>There is a lot of news and speculation coming ...</td>\n",
-       "      <td>2019-02-27 20:26:35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -448,11 +444,10 @@
        "      <td>https://www.reddit.com/r/india/comments/38heyu...</td>\n",
        "      <td>257</td>\n",
        "      <td>[R]eddiquette</td>\n",
-       "      <td>8050</td>\n",
+       "      <td>8051</td>\n",
        "      <td>38heyu</td>\n",
        "      <td>UnileverCancerFactor</td>\n",
        "      <td>I don't want to leave this be, and need some h...</td>\n",
-       "      <td>2015-06-04 19:24:17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -460,11 +455,10 @@
        "      <td>https://www.reddit.com/r/india/comments/4m5l2k...</td>\n",
        "      <td>241</td>\n",
        "      <td>[R]eddiquette</td>\n",
-       "      <td>6561</td>\n",
+       "      <td>6553</td>\n",
        "      <td>4m5l2k</td>\n",
        "      <td>ForPranitaThrowaway</td>\n",
        "      <td>http://timesofindia.indiatimes.com/videos/news...</td>\n",
-       "      <td>2016-06-02 18:30:32</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -479,28 +473,28 @@
        "4  My friend passed away and TOI made a mockery o...   \n",
        "\n",
        "                                                 url  comments          flair  \\\n",
-       "0  https://www.reddit.com/r/india/comments/981o7s...       832  [R]eddiquette   \n",
-       "1  https://www.reddit.com/r/india/comments/f9outu...      4198       Politics   \n",
+       "0  https://www.reddit.com/r/india/comments/981o7s...       831  [R]eddiquette   \n",
+       "1  https://www.reddit.com/r/india/comments/f9outu...      4195       Politics   \n",
        "2  https://www.reddit.com/r/india/comments/avafxp...      6913  [R]eddiquette   \n",
        "3  https://www.reddit.com/r/india/comments/38heyu...       257  [R]eddiquette   \n",
        "4  https://www.reddit.com/r/india/comments/4m5l2k...       241  [R]eddiquette   \n",
        "\n",
        "   score      id                author  \\\n",
-       "0  19701  981o7s          TheBeginnerr   \n",
-       "1  17869  f9outu                pking3   \n",
-       "2  10205  avafxp        doc_two_thirty   \n",
-       "3   8050  38heyu  UnileverCancerFactor   \n",
-       "4   6561  4m5l2k   ForPranitaThrowaway   \n",
+       "0  19710  981o7s          TheBeginnerr   \n",
+       "1  17880  f9outu                pking3   \n",
+       "2  10210  avafxp        doc_two_thirty   \n",
+       "3   8051  38heyu  UnileverCancerFactor   \n",
+       "4   6553  4m5l2k   ForPranitaThrowaway   \n",
        "\n",
-       "                                                body            timestamp  \n",
-       "0  >**Note**: If you want to know what this is al...  2018-08-18 01:32:17  \n",
-       "1  Fuck all religion. Fuck Hindusim, fuck Islam, ...  2020-02-26 19:40:49  \n",
-       "2  There is a lot of news and speculation coming ...  2019-02-27 20:26:35  \n",
-       "3  I don't want to leave this be, and need some h...  2015-06-04 19:24:17  \n",
-       "4  http://timesofindia.indiatimes.com/videos/news...  2016-06-02 18:30:32  "
+       "                                                body  \n",
+       "0  >**Note**: If you want to know what this is al...  \n",
+       "1  Fuck all religion. Fuck Hindusim, fuck Islam, ...  \n",
+       "2  There is a lot of news and speculation coming ...  \n",
+       "3  I don't want to leave this be, and need some h...  \n",
+       "4  http://timesofindia.indiatimes.com/videos/news...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,9 +544,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pranay/anaconda3/lib/python3.7/site-packages/bs4/__init__.py:314: UserWarning: \"b'.'\" looks like a filename, not markup. You should probably open this file and pass the filehandle into Beautiful Soup.\n",
+      "  ' Beautiful Soup.' % markup)\n"
+     ]
+    }
+   ],
    "source": [
     "rindi['title'] = rindi['title'].apply(string_form)\n",
     "rindi['body'] = rindi['body'].apply(string_form)\n",
@@ -562,13 +565,13 @@
     "rindi['body'] = rindi['body'].apply(clean_text)\n",
     "rindi['comments'] = rindi['comments'].apply(clean_text)\n",
     "\n",
-    "feature_combine = rindi[\"title\"] + rindi[\"comments\"] + rindi[\"url\"]\n",
+    "feature_combine = rindi[\"title\"] + rindi[\"comments\"] + rindi[\"url\"] + rindi['body']\n",
     "rindi = rindi.assign(feature_combine = feature_combine)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +627,7 @@
     "\n",
     "    logreg = Pipeline([('vect', CountVectorizer()),\n",
     "                  ('tfidf', TfidfTransformer()),\n",
-    "                  ('clf', LogisticRegression(n_jobs=1, C=1e5)),\n",
+    "                  ('clf', LogisticRegression(n_jobs=1, C=1e30)),\n",
     "                 ])\n",
     "    logreg.fit(X_train, y_train)\n",
     "\n",
@@ -636,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,13 +685,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_test(X,y):\n",
     " \n",
-    "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state = 42)\n",
+    "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state = 42)\n",
     "\n",
     "  print(\"Results of Naive Bayes Classifier\")\n",
     "  nb_classifier(X_train, X_test, y_train, y_test)\n",
@@ -698,13 +701,13 @@
     "  logisticreg(X_train, X_test, y_train, y_test)\n",
     "  print(\"Results of Random Forest\")\n",
     "  randomforest(X_train, X_test, y_train, y_test)\n",
-    "  print(\"Results of MLP Classifier\")\n",
-    " # mlpclassifier(X_train, X_test, y_train, y_test)"
+    "  #print(\"Results of MLP Classifier\")\n",
+    "  #mlpclassifier(X_train, X_test, y_train, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -715,56 +718,85 @@
       "\n",
       "\n",
       "Results of Naive Bayes Classifier\n",
-      "accuracy 0.2631578947368421\n",
+      "accuracy 0.5071090047393365\n",
       "Results of Linear Support Vector Machine\n",
-      "accuracy 0.21052631578947367\n",
+      "accuracy 0.5971563981042654\n",
       "Results of Logistic Regression\n",
-      "accuracy 0.2631578947368421\n",
+      "accuracy 0.5734597156398105\n",
       "Results of Random Forest\n",
-      "accuracy 0.2631578947368421\n",
-      "Results of MLP Classifier\n",
+      "accuracy 0.5450236966824644\n",
       "\n",
       "\n",
       "Flair Detection using Body as Feature:\n",
       "\n",
       "\n",
       "Results of Naive Bayes Classifier\n",
-      "accuracy 0.2631578947368421\n",
+      "accuracy 0.5165876777251185\n",
       "Results of Linear Support Vector Machine\n",
-      "accuracy 0.47368421052631576\n",
+      "accuracy 0.6445497630331753\n",
       "Results of Logistic Regression\n",
-      "accuracy 0.5263157894736842\n",
+      "accuracy 0.6161137440758294\n",
       "Results of Random Forest\n",
-      "accuracy 0.15789473684210525\n",
-      "Results of MLP Classifier\n",
+      "accuracy 0.6350710900473934\n",
       "\n",
       "\n",
       "Flair Detection using URL as Feature:\n",
       "\n",
       "\n",
       "Results of Naive Bayes Classifier\n",
-      "accuracy 0.2631578947368421\n",
+      "accuracy 0.41706161137440756\n",
       "Results of Linear Support Vector Machine\n",
-      "accuracy 0.2631578947368421\n",
+      "accuracy 0.5260663507109005\n",
       "Results of Logistic Regression\n",
-      "accuracy 0.2631578947368421\n",
+      "accuracy 0.44075829383886256\n",
       "Results of Random Forest\n",
-      "accuracy 0.2631578947368421\n",
-      "Results of MLP Classifier\n",
+      "accuracy 0.4312796208530806\n",
       "\n",
       "\n",
       "Flair Detection using Comments as Feature:\n",
       "\n",
       "\n",
       "Results of Naive Bayes Classifier\n",
-      "accuracy 0.2631578947368421\n",
+      "accuracy 0.4075829383886256\n",
       "Results of Linear Support Vector Machine\n",
-      "accuracy 0.2631578947368421\n",
-      "Results of Logistic Regression\n",
-      "accuracy 0.3157894736842105\n",
+      "accuracy 0.4549763033175355\n",
+      "Results of Logistic Regression\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pranay/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy 0.44075829383886256\n",
       "Results of Random Forest\n",
-      "accuracy 0.2631578947368421\n",
-      "Results of MLP Classifier\n"
+      "accuracy 0.44549763033175355\n",
+      "\n",
+      "\n",
+      "Flair Detection using combined features as Feature:\n",
+      "\n",
+      "\n",
+      "Results of Naive Bayes Classifier\n",
+      "accuracy 0.5023696682464455\n",
+      "Results of Linear Support Vector Machine\n",
+      "accuracy 0.6587677725118484\n",
+      "Results of Logistic Regression\n",
+      "accuracy 0.6350710900473934\n",
+      "Results of Random Forest\n",
+      "accuracy 0.7014218009478673\n"
      ]
     }
    ],
@@ -790,6 +822,10 @@
     "train_test(Z,cat)\n",
     "print(\"\\n\")\n",
     "print(\"Flair Detection using Comments as Feature:\")\n",
+    "print(\"\\n\")\n",
+    "train_test(W,cat)\n",
+    "print(\"\\n\")\n",
+    "print(\"Flair Detection using combined features as Feature:\")\n",
     "print(\"\\n\")\n",
     "train_test(V,cat)\n"
    ]
