--- a/Models.ipynb
+++ b/Models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,13 @@
       "[nltk_data]    | Downloading package qc to /home/pranay/nltk_data...\n",
       "[nltk_data]    |   Package qc is already up-to-date!\n",
       "[nltk_data]    | Downloading package reuters to\n",
-      "[nltk_data]    |     /home/pranay/nltk_data...\n",
+      "[nltk_data]    |     /home/pranay/nltk_data...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "[nltk_data]    |   Package reuters is already up-to-date!\n",
       "[nltk_data]    | Downloading package rte to /home/pranay/nltk_data...\n",
       "[nltk_data]    |   Package rte is already up-to-date!\n",
@@ -334,7 +340,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-63-705b8cb73dfc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneural_network\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMLPClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-1-705b8cb73dfc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneural_network\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMLPClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn.cross_validation'"
      ]
     }
@@ -370,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -407,58 +413,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Will donate thrice the number of upvotes (amou...</td>\n",
-       "      <td>https://www.reddit.com/r/india/comments/981o7s...</td>\n",
-       "      <td>831</td>\n",
-       "      <td>[R]eddiquette</td>\n",
-       "      <td>19710</td>\n",
-       "      <td>981o7s</td>\n",
-       "      <td>TheBeginnerr</td>\n",
-       "      <td>&gt;**Note**: If you want to know what this is al...</td>\n",
+       "      <td>Coronavirus (COVID-19) Megathread - News and U...</td>\n",
+       "      <td>https://www.reddit.com/r/india/comments/g1zi21...</td>\n",
+       "      <td>1802.0</td>\n",
+       "      <td>Coronavirus</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>g1zi21</td>\n",
+       "      <td>IAmMohit</td>\n",
+       "      <td>###[Covid-19 Fundraisers &amp; Donation Links](htt...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Fuck all Religion</td>\n",
-       "      <td>https://www.reddit.com/r/india/comments/f9outu...</td>\n",
-       "      <td>4195</td>\n",
-       "      <td>Politics</td>\n",
-       "      <td>17880</td>\n",
-       "      <td>f9outu</td>\n",
-       "      <td>pking3</td>\n",
-       "      <td>Fuck all religion. Fuck Hindusim, fuck Islam, ...</td>\n",
+       "      <td>[Monthly Happiness Thread] Randians, please sh...</td>\n",
+       "      <td>https://www.reddit.com/r/india/comments/g4d2ix...</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>Scheduled</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>g4d2ix</td>\n",
+       "      <td>cool_boyy</td>\n",
+       "      <td>&lt;3         \\n          \\nLinks:               ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Megathread: India-Pakistan border skirmish</td>\n",
-       "      <td>https://www.reddit.com/r/india/comments/avafxp...</td>\n",
-       "      <td>6913</td>\n",
-       "      <td>[R]eddiquette</td>\n",
-       "      <td>10210</td>\n",
-       "      <td>avafxp</td>\n",
-       "      <td>doc_two_thirty</td>\n",
-       "      <td>There is a lot of news and speculation coming ...</td>\n",
+       "      <td>RIP Prof. G. D. Agarwal. A selfless eco-warrio...</td>\n",
+       "      <td>https://www.reddit.com/r/india/comments/g4ppv1...</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>Non-Political</td>\n",
+       "      <td>444.0</td>\n",
+       "      <td>g4ppv1</td>\n",
+       "      <td>be_yourself_2020</td>\n",
+       "      <td>**TL;DR : IITian-turned-activist Professor GD ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Help, ideas needed. HLL poisoned my village wi...</td>\n",
-       "      <td>https://www.reddit.com/r/india/comments/38heyu...</td>\n",
-       "      <td>257</td>\n",
-       "      <td>[R]eddiquette</td>\n",
-       "      <td>8051</td>\n",
-       "      <td>38heyu</td>\n",
-       "      <td>UnileverCancerFactor</td>\n",
-       "      <td>I don't want to leave this be, and need some h...</td>\n",
+       "      <td>[showerthoughts] People finding old demonetize...</td>\n",
+       "      <td>https://www.reddit.com/r/india/comments/g4tv6h...</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Non-Political</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>g4tv6h</td>\n",
+       "      <td>longpostshitpost</td>\n",
+       "      <td>Had they cleaned up their places at least once...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>My friend passed away and TOI made a mockery o...</td>\n",
-       "      <td>https://www.reddit.com/r/india/comments/4m5l2k...</td>\n",
-       "      <td>241</td>\n",
-       "      <td>[R]eddiquette</td>\n",
-       "      <td>6553</td>\n",
-       "      <td>4m5l2k</td>\n",
-       "      <td>ForPranitaThrowaway</td>\n",
-       "      <td>http://timesofindia.indiatimes.com/videos/news...</td>\n",
+       "      <td>Three Hindu men in Karnataka held for causing ...</td>\n",
+       "      <td>https://www.reddit.com/r/india/comments/g4nhgb...</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>Politics</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>g4nhgb</td>\n",
+       "      <td>silentr3b31</td>\n",
+       "      <td>https://www.businessinsider.in/india/news/thre...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -466,35 +472,35 @@
       ],
       "text/plain": [
        "                                               title  \\\n",
-       "0  Will donate thrice the number of upvotes (amou...   \n",
-       "1                                  Fuck all Religion   \n",
-       "2         Megathread: India-Pakistan border skirmish   \n",
-       "3  Help, ideas needed. HLL poisoned my village wi...   \n",
-       "4  My friend passed away and TOI made a mockery o...   \n",
+       "0  Coronavirus (COVID-19) Megathread - News and U...   \n",
+       "1  [Monthly Happiness Thread] Randians, please sh...   \n",
+       "2  RIP Prof. G. D. Agarwal. A selfless eco-warrio...   \n",
+       "3  [showerthoughts] People finding old demonetize...   \n",
+       "4  Three Hindu men in Karnataka held for causing ...   \n",
        "\n",
        "                                                 url  comments          flair  \\\n",
-       "0  https://www.reddit.com/r/india/comments/981o7s...       831  [R]eddiquette   \n",
-       "1  https://www.reddit.com/r/india/comments/f9outu...      4195       Politics   \n",
-       "2  https://www.reddit.com/r/india/comments/avafxp...      6913  [R]eddiquette   \n",
-       "3  https://www.reddit.com/r/india/comments/38heyu...       257  [R]eddiquette   \n",
-       "4  https://www.reddit.com/r/india/comments/4m5l2k...       241  [R]eddiquette   \n",
+       "0  https://www.reddit.com/r/india/comments/g1zi21...    1802.0    Coronavirus   \n",
+       "1  https://www.reddit.com/r/india/comments/g4d2ix...      52.0      Scheduled   \n",
+       "2  https://www.reddit.com/r/india/comments/g4ppv1...      18.0  Non-Political   \n",
+       "3  https://www.reddit.com/r/india/comments/g4tv6h...       8.0  Non-Political   \n",
+       "4  https://www.reddit.com/r/india/comments/g4nhgb...       9.0       Politics   \n",
        "\n",
-       "   score      id                author  \\\n",
-       "0  19710  981o7s          TheBeginnerr   \n",
-       "1  17880  f9outu                pking3   \n",
-       "2  10210  avafxp        doc_two_thirty   \n",
-       "3   8051  38heyu  UnileverCancerFactor   \n",
-       "4   6553  4m5l2k   ForPranitaThrowaway   \n",
+       "   score      id            author  \\\n",
+       "0  138.0  g1zi21          IAmMohit   \n",
+       "1   32.0  g4d2ix         cool_boyy   \n",
+       "2  444.0  g4ppv1  be_yourself_2020   \n",
+       "3   66.0  g4tv6h  longpostshitpost   \n",
+       "4  164.0  g4nhgb       silentr3b31   \n",
        "\n",
        "                                                body  \n",
-       "0  >**Note**: If you want to know what this is al...  \n",
-       "1  Fuck all religion. Fuck Hindusim, fuck Islam, ...  \n",
-       "2  There is a lot of news and speculation coming ...  \n",
-       "3  I don't want to leave this be, and need some h...  \n",
-       "4  http://timesofindia.indiatimes.com/videos/news...  "
+       "0  ###[Covid-19 Fundraisers & Donation Links](htt...  \n",
+       "1  <3         \\n          \\nLinks:               ...  \n",
+       "2  **TL;DR : IITian-turned-activist Professor GD ...  \n",
+       "3  Had they cleaned up their places at least once...  \n",
+       "4  https://www.businessinsider.in/india/news/thre...  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,12 +699,12 @@
     " \n",
     "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state = 42)\n",
     "\n",
-    "  print(\"Results of Naive Bayes Classifier\")\n",
-    "  nb_classifier(X_train, X_test, y_train, y_test)\n",
-    "  print(\"Results of Linear Support Vector Machine\")\n",
-    "  linear_svm(X_train, X_test, y_train, y_test)\n",
-    "  print(\"Results of Logistic Regression\")\n",
-    "  logisticreg(X_train, X_test, y_train, y_test)\n",
+    " # print(\"Results of Naive Bayes Classifier\")\n",
+    "  #nb_classifier(X_train, X_test, y_train, y_test)\n",
+    "  #print(\"Results of Linear Support Vector Machine\")\n",
+    "  #linear_svm(X_train, X_test, y_train, y_test)\n",
+    "  #print(\"Results of Logistic Regression\")\n",
+    "  #logisticreg(X_train, X_test, y_train, y_test)\n",
     "  print(\"Results of Random Forest\")\n",
     "  randomforest(X_train, X_test, y_train, y_test)\n",
     "  #print(\"Results of MLP Classifier\")\n",
@@ -707,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -717,86 +723,36 @@
       "Flair Detection using Title as Feature:\n",
       "\n",
       "\n",
-      "Results of Naive Bayes Classifier\n",
-      "accuracy 0.5071090047393365\n",
-      "Results of Linear Support Vector Machine\n",
-      "accuracy 0.5971563981042654\n",
-      "Results of Logistic Regression\n",
-      "accuracy 0.5734597156398105\n",
       "Results of Random Forest\n",
-      "accuracy 0.5450236966824644\n",
+      "accuracy 0.794392523364486\n",
       "\n",
       "\n",
       "Flair Detection using Body as Feature:\n",
       "\n",
       "\n",
-      "Results of Naive Bayes Classifier\n",
-      "accuracy 0.5165876777251185\n",
-      "Results of Linear Support Vector Machine\n",
-      "accuracy 0.6445497630331753\n",
-      "Results of Logistic Regression\n",
-      "accuracy 0.6161137440758294\n",
       "Results of Random Forest\n",
-      "accuracy 0.6350710900473934\n",
+      "accuracy 0.7850467289719626\n",
       "\n",
       "\n",
       "Flair Detection using URL as Feature:\n",
       "\n",
       "\n",
-      "Results of Naive Bayes Classifier\n",
-      "accuracy 0.41706161137440756\n",
-      "Results of Linear Support Vector Machine\n",
-      "accuracy 0.5260663507109005\n",
-      "Results of Logistic Regression\n",
-      "accuracy 0.44075829383886256\n",
       "Results of Random Forest\n",
-      "accuracy 0.4312796208530806\n",
+      "accuracy 0.5794392523364486\n",
       "\n",
       "\n",
       "Flair Detection using Comments as Feature:\n",
       "\n",
       "\n",
-      "Results of Naive Bayes Classifier\n",
-      "accuracy 0.4075829383886256\n",
-      "Results of Linear Support Vector Machine\n",
-      "accuracy 0.4549763033175355\n",
-      "Results of Logistic Regression\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pranay/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy 0.44075829383886256\n",
       "Results of Random Forest\n",
-      "accuracy 0.44549763033175355\n",
+      "accuracy 0.514018691588785\n",
       "\n",
       "\n",
       "Flair Detection using combined features as Feature:\n",
       "\n",
       "\n",
-      "Results of Naive Bayes Classifier\n",
-      "accuracy 0.5023696682464455\n",
-      "Results of Linear Support Vector Machine\n",
-      "accuracy 0.6587677725118484\n",
-      "Results of Logistic Regression\n",
-      "accuracy 0.6350710900473934\n",
       "Results of Random Forest\n",
-      "accuracy 0.7014218009478673\n"
+      "accuracy 0.7819314641744548\n"
      ]
     }
    ],
@@ -832,10 +788,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(train_test, open('model.sav','wb'))"
+   ]
   }
  ],
  "metadata": {
