All the data before deploying

--- a/Models.ipynb
+++ b/Models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -165,13 +165,7 @@
       "[nltk_data]    | Downloading package qc to /home/pranay/nltk_data...\n",
       "[nltk_data]    |   Package qc is already up-to-date!\n",
       "[nltk_data]    | Downloading package reuters to\n",
-      "[nltk_data]    |     /home/pranay/nltk_data...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[nltk_data]    |     /home/pranay/nltk_data...\n",
       "[nltk_data]    |   Package reuters is already up-to-date!\n",
       "[nltk_data]    | Downloading package rte to /home/pranay/nltk_data...\n",
       "[nltk_data]    |   Package rte is already up-to-date!\n",
@@ -340,13 +334,14 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-705b8cb73dfc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneural_network\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMLPClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-106-96e24d2d7241>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneural_network\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMLPClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn.cross_validation'"
      ]
     }
    ],
    "source": [
     "import os\n",
+    "import praw\n",
     "import pandas as pd\n",
     "import datetime as dt\n",
     "import logging\n",
@@ -376,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -408,63 +403,69 @@
        "      <th>id</th>\n",
        "      <th>author</th>\n",
        "      <th>body</th>\n",
+       "      <th>timestamp</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Coronavirus (COVID-19) Megathread - News and U...</td>\n",
-       "      <td>https://www.reddit.com/r/india/comments/g1zi21...</td>\n",
-       "      <td>1802.0</td>\n",
-       "      <td>Coronavirus</td>\n",
-       "      <td>138.0</td>\n",
-       "      <td>g1zi21</td>\n",
-       "      <td>IAmMohit</td>\n",
-       "      <td>###[Covid-19 Fundraisers &amp; Donation Links](htt...</td>\n",
+       "      <td>Will donate thrice the number of upvotes (amou...</td>\n",
+       "      <td>https://www.reddit.com/r/india/comments/981o7s...</td>\n",
+       "      <td>832.0</td>\n",
+       "      <td>[R]eddiquette</td>\n",
+       "      <td>19710.0</td>\n",
+       "      <td>981o7s</td>\n",
+       "      <td>TheBeginnerr</td>\n",
+       "      <td>&gt;**Note**: If you want to know what this is al...</td>\n",
+       "      <td>2018-08-18 1:32:17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>[Monthly Happiness Thread] Randians, please sh...</td>\n",
-       "      <td>https://www.reddit.com/r/india/comments/g4d2ix...</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>Scheduled</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>g4d2ix</td>\n",
-       "      <td>cool_boyy</td>\n",
-       "      <td>&lt;3         \\n          \\nLinks:               ...</td>\n",
+       "      <td>Fuck all Religion</td>\n",
+       "      <td>https://www.reddit.com/r/india/comments/f9outu...</td>\n",
+       "      <td>4198.0</td>\n",
+       "      <td>Politics</td>\n",
+       "      <td>17885.0</td>\n",
+       "      <td>f9outu</td>\n",
+       "      <td>pking3</td>\n",
+       "      <td>Fuck all religion. Fuck Hindusim, fuck Islam, ...</td>\n",
+       "      <td>2020-02-26 19:40:49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>RIP Prof. G. D. Agarwal. A selfless eco-warrio...</td>\n",
-       "      <td>https://www.reddit.com/r/india/comments/g4ppv1...</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>Non-Political</td>\n",
-       "      <td>444.0</td>\n",
-       "      <td>g4ppv1</td>\n",
-       "      <td>be_yourself_2020</td>\n",
-       "      <td>**TL;DR : IITian-turned-activist Professor GD ...</td>\n",
+       "      <td>Megathread: India-Pakistan border skirmish</td>\n",
+       "      <td>https://www.reddit.com/r/india/comments/avafxp...</td>\n",
+       "      <td>6913.0</td>\n",
+       "      <td>[R]eddiquette</td>\n",
+       "      <td>10210.0</td>\n",
+       "      <td>avafxp</td>\n",
+       "      <td>doc_two_thirty</td>\n",
+       "      <td>There is a lot of news and speculation coming ...</td>\n",
+       "      <td>2019-02-27 20:26:35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>[showerthoughts] People finding old demonetize...</td>\n",
-       "      <td>https://www.reddit.com/r/india/comments/g4tv6h...</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>Non-Political</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>g4tv6h</td>\n",
-       "      <td>longpostshitpost</td>\n",
-       "      <td>Had they cleaned up their places at least once...</td>\n",
+       "      <td>Help, ideas needed. HLL poisoned my village wi...</td>\n",
+       "      <td>https://www.reddit.com/r/india/comments/38heyu...</td>\n",
+       "      <td>257.0</td>\n",
+       "      <td>[R]eddiquette</td>\n",
+       "      <td>8057.0</td>\n",
+       "      <td>38heyu</td>\n",
+       "      <td>UnileverCancerFactor</td>\n",
+       "      <td>I don't want to leave this be, and need some h...</td>\n",
+       "      <td>2015-06-04 19:24:17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Three Hindu men in Karnataka held for causing ...</td>\n",
-       "      <td>https://www.reddit.com/r/india/comments/g4nhgb...</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>Politics</td>\n",
-       "      <td>164.0</td>\n",
-       "      <td>g4nhgb</td>\n",
-       "      <td>silentr3b31</td>\n",
-       "      <td>https://www.businessinsider.in/india/news/thre...</td>\n",
+       "      <td>My friend passed away and TOI made a mockery o...</td>\n",
+       "      <td>https://www.reddit.com/r/india/comments/4m5l2k...</td>\n",
+       "      <td>241.0</td>\n",
+       "      <td>[R]eddiquette</td>\n",
+       "      <td>6555.0</td>\n",
+       "      <td>4m5l2k</td>\n",
+       "      <td>ForPranitaThrowaway</td>\n",
+       "      <td>http://timesofindia.indiatimes.com/videos/news...</td>\n",
+       "      <td>2016-06-02 18:30:32</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -472,35 +473,35 @@
       ],
       "text/plain": [
        "                                               title  \\\n",
-       "0  Coronavirus (COVID-19) Megathread - News and U...   \n",
-       "1  [Monthly Happiness Thread] Randians, please sh...   \n",
-       "2  RIP Prof. G. D. Agarwal. A selfless eco-warrio...   \n",
-       "3  [showerthoughts] People finding old demonetize...   \n",
-       "4  Three Hindu men in Karnataka held for causing ...   \n",
+       "0  Will donate thrice the number of upvotes (amou...   \n",
+       "1                                  Fuck all Religion   \n",
+       "2         Megathread: India-Pakistan border skirmish   \n",
+       "3  Help, ideas needed. HLL poisoned my village wi...   \n",
+       "4  My friend passed away and TOI made a mockery o...   \n",
        "\n",
        "                                                 url  comments          flair  \\\n",
-       "0  https://www.reddit.com/r/india/comments/g1zi21...    1802.0    Coronavirus   \n",
-       "1  https://www.reddit.com/r/india/comments/g4d2ix...      52.0      Scheduled   \n",
-       "2  https://www.reddit.com/r/india/comments/g4ppv1...      18.0  Non-Political   \n",
-       "3  https://www.reddit.com/r/india/comments/g4tv6h...       8.0  Non-Political   \n",
-       "4  https://www.reddit.com/r/india/comments/g4nhgb...       9.0       Politics   \n",
+       "0  https://www.reddit.com/r/india/comments/981o7s...     832.0  [R]eddiquette   \n",
+       "1  https://www.reddit.com/r/india/comments/f9outu...    4198.0       Politics   \n",
+       "2  https://www.reddit.com/r/india/comments/avafxp...    6913.0  [R]eddiquette   \n",
+       "3  https://www.reddit.com/r/india/comments/38heyu...     257.0  [R]eddiquette   \n",
+       "4  https://www.reddit.com/r/india/comments/4m5l2k...     241.0  [R]eddiquette   \n",
        "\n",
-       "   score      id            author  \\\n",
-       "0  138.0  g1zi21          IAmMohit   \n",
-       "1   32.0  g4d2ix         cool_boyy   \n",
-       "2  444.0  g4ppv1  be_yourself_2020   \n",
-       "3   66.0  g4tv6h  longpostshitpost   \n",
-       "4  164.0  g4nhgb       silentr3b31   \n",
+       "     score      id                author  \\\n",
+       "0  19710.0  981o7s          TheBeginnerr   \n",
+       "1  17885.0  f9outu                pking3   \n",
+       "2  10210.0  avafxp        doc_two_thirty   \n",
+       "3   8057.0  38heyu  UnileverCancerFactor   \n",
+       "4   6555.0  4m5l2k   ForPranitaThrowaway   \n",
        "\n",
-       "                                                body  \n",
-       "0  ###[Covid-19 Fundraisers & Donation Links](htt...  \n",
-       "1  <3         \\n          \\nLinks:               ...  \n",
-       "2  **TL;DR : IITian-turned-activist Professor GD ...  \n",
-       "3  Had they cleaned up their places at least once...  \n",
-       "4  https://www.businessinsider.in/india/news/thre...  "
+       "                                                body            timestamp  \n",
+       "0  >**Note**: If you want to know what this is al...   2018-08-18 1:32:17  \n",
+       "1  Fuck all religion. Fuck Hindusim, fuck Islam, ...  2020-02-26 19:40:49  \n",
+       "2  There is a lot of news and speculation coming ...  2019-02-27 20:26:35  \n",
+       "3  I don't want to leave this be, and need some h...  2015-06-04 19:24:17  \n",
+       "4  http://timesofindia.indiatimes.com/videos/news...  2016-06-02 18:30:32  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,16 +618,16 @@
     "  y_pred = sgd.predict(X_test)\n",
     "\n",
     "  print('accuracy %s' % accuracy_score(y_pred, y_test))\n",
-    "  #print(classification_report(y_test, y_pred,target_names=flairs))"
+    "  #print(classification_report(y_test, y_pred,target_names=flares))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "    \n",
     "def logisticreg(X_train, X_test, y_train, y_test):\n",
     "\n",
     "    from sklearn.linear_model import LogisticRegression\n",
@@ -645,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,21 +700,21 @@
     " \n",
     "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state = 42)\n",
     "\n",
-    " # print(\"Results of Naive Bayes Classifier\")\n",
+    "  #print(\"Results of Naive Bayes Classifier\")\n",
     "  #nb_classifier(X_train, X_test, y_train, y_test)\n",
     "  #print(\"Results of Linear Support Vector Machine\")\n",
-    "  #linear_svm(X_train, X_test, y_train, y_test)\n",
+    "  linear_svm(X_train, X_test, y_train, y_test)\n",
     "  #print(\"Results of Logistic Regression\")\n",
     "  #logisticreg(X_train, X_test, y_train, y_test)\n",
-    "  print(\"Results of Random Forest\")\n",
-    "  randomforest(X_train, X_test, y_train, y_test)\n",
+    "  #print(\"Results of Random Forest\")\n",
+    "  #randomforest(X_train, X_test, y_train, y_test)\n",
     "  #print(\"Results of MLP Classifier\")\n",
     "  #mlpclassifier(X_train, X_test, y_train, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -723,36 +724,31 @@
       "Flair Detection using Title as Feature:\n",
       "\n",
       "\n",
-      "Results of Random Forest\n",
-      "accuracy 0.794392523364486\n",
+      "accuracy 0.8113207547169812\n",
       "\n",
       "\n",
       "Flair Detection using Body as Feature:\n",
       "\n",
       "\n",
-      "Results of Random Forest\n",
-      "accuracy 0.7850467289719626\n",
+      "accuracy 0.8278301886792453\n",
       "\n",
       "\n",
       "Flair Detection using URL as Feature:\n",
       "\n",
       "\n",
-      "Results of Random Forest\n",
-      "accuracy 0.5794392523364486\n",
+      "accuracy 0.7523584905660378\n",
       "\n",
       "\n",
       "Flair Detection using Comments as Feature:\n",
       "\n",
       "\n",
-      "Results of Random Forest\n",
-      "accuracy 0.514018691588785\n",
+      "accuracy 0.4056603773584906\n",
       "\n",
       "\n",
       "Flair Detection using combined features as Feature:\n",
       "\n",
       "\n",
-      "Results of Random Forest\n",
-      "accuracy 0.7819314641744548\n"
+      "accuracy 0.8325471698113207\n"
      ]
     }
    ],
@@ -788,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,12 +793,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(train_test, open('model.sav','wb'))"
+    "pickle.dump(linear_svm, open('model.pkl','wb'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
