Markdown cells added

--- a/Notebooks/Part1.ipynb
+++ b/Notebooks/Part1.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1><center> Scraping the data from Reddit </center></h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing the necessary libraries and modules:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,31 +27,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
    "source": [
-    "reddit = praw.Reddit(client_id='U2Ag2amSBBT2yA', client_secret='dBkSqsN5cTkLXLnaJwmfe0M4cbo', user_agent='flare', username='pranay-ar',password='Elisha2835!')\n",
-    "\n",
-    "print(reddit.read_only)"
+    "Getting the instances of Reddit and  the required Subreddit:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "flares = [\"AskIndia\", \"Non-Political\", \"[R]eddiquette\", \"Scheduled\", \"Photography\", \"AMA\", \"Politics\", \"Business/Finance\", \"Science/Technology\", \"Sports\", \"Food\", \"Policy/Economy\"]"
+    "reddit = praw.Reddit(client_id='U2Ag2amSBBT2yA', client_secret='dBkSqsN5cTkLXLnaJwmfe0M4cbo', user_agent='flare', username='pranay-ar',password='Elisha2835!')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defining the flares we are going to classify on and the dictionary form they are going to be stored in initially:"
    ]
   },
   {
@@ -46,6 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "flares = [\"AskIndia\", \"Non-Political\", \"[R]eddiquette\", \"Scheduled\", \"Photography\", \"AMA\", \"Politics\", \"Business/Finance\", \"Science/Technology\", \"Sports\", \"Food\", \"Policy/Economy\"]\n",
+    "\n",
     "subreddit = reddit.subreddit('india')\n",
     "topics_dict = { \"title\":[], \"url\":[], \"comms_num\": [], \"flair\": \n",
     "               [], \"score\": [], \"id\": [], \"created\": [], \"author\": [], \"body\":[]}\n",
@@ -53,6 +65,13 @@
     "\n",
     "for flair in flares:\n",
     "    rindia= subreddit.new(limit=10000)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scraping the data from Reddit"
    ]
   },
   {
@@ -81,6 +100,13 @@
     "    topics_dict[\"body\"].append(submission.selftext)\n",
     "    \n",
     "print (topics_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Converting the data into a DataFrame so as to visualise it better in the form of a spreadsheet:"
    ]
   },
   {
@@ -322,6 +348,13 @@
    "source": [
     "topics_data = pd.DataFrame(topics_dict)\n",
     "topics_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reddit uses UNIX timestamps to format date and time. Instead of manually converting all those entries, we can easily write up a function in Python to automate that process. We define it, call it, and join the new column to dataset with the following 3 blocks of code:"
    ]
   },
   {
@@ -597,12 +630,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "topics_data.to_csv('rindia11.csv', index=False) "
+    "Now saving the data we have scraped in the form of a spreadsheet to our local folder:"
    ]
   },
   {
@@ -610,7 +641,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "topics_data.to_csv('rindia.csv', index=False) "
+   ]
   }
  ],
  "metadata": {
